# style-finder

./: .gitignore  AGENTS.md  README.md  TODO.md
.github/branch-protection/: main.json
.github/workflows/: backend-tests.yml  frontend-e2e.yml
backend/: .env.example  README.md  pyproject.toml  requirements-test.txt
backend/data/vision_dataset/: README.md
backend/data/vision_dataset/labels/: codytest_1.json  codytest_10.json  codytest_2.json  codytest_3.json  codytest_4.json  codytest_5.json  codytest_6.json  codytest_7.json  codytest_8.json  codytest_9.json  sample-flatlay-001.json
backend/migrations/: README.md  R__rollback_v1.sql  V1__init_schema.sql
backend/scripts/: check_upload_analysis.py  compare_vision_predictors.py  evaluate_vision_dataset.py  run-dev.sh
backend/src/: main.py
backend/src/api/: router.py
backend/src/api/routes/: auth.py  health.py  recommendation.py  upload.py  wishlist.py
backend/src/core/: auth.py  config.py  errors.py  response.py
backend/src/services/: __init__.py  auth_service.py  image_analysis.py  naver_shopping.py  store.py  vision_dataset_evaluator.py  vision_outfit_analyzer.py  vision_reranker.py
backend/tests/: conftest.py  test_api_e2e.py  test_api_failures.py  test_naver_shopping.py  test_outfit_query_hints.py  test_store_color_matching.py  test_store_persistence.py  test_vision_dataset_evaluator.py  test_vision_outfit_analyzer.py  test_vision_reranker.py
docs/: github-branch-protection.md
frontend/: README.md  package-lock.json  package.json  playwright.config.ts
scripts/: apply-branch-protection.sh
(+396 files in other folders)
